--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>lemonwaffle</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="icon" href="img/favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|Roboto+Mono:400,700" rel="stylesheet">
     </head>
 
@@ -33,7 +34,7 @@
             <a href='https://lemonwaffle.github.io/hold-your-zebras/'>
             <div class='content__post content__post--1'>
                 <p class='post__title'>
-                    Hold your horses
+                    Hold your zebras
                 </p>
                 <p class='post__subtitle'>
                     <span>Sep 2017</span>
