--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         <!-- CONTENT STARTS HERE -->
 
         <div class='content'>
+            <a href='https://lemonwaffle.github.io/defenders-of-old/'>
+            <div class='content__post content__post--3'>
+                <p class='post__title'>
+                    Defenders of Old
+                </p>
+                <p class='post__subtitle'>
+                    <span>Aug 2018</span>
+                    Exploring the most decorated players of Dota 2
+                </p>
+            </div>
             <a href='https://lemonwaffle.github.io/meta-game/'>
             <div class='content__post content__post--2'>
                 <p class='post__title'>
