--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- CONTENT STARTS HERE -->
 
         <div class='content'>
-            <a href='https://lemonwaffle.github.io/defenders-of-old/'>
+            <a href='https://yizhe-ang.github.io/defenders-of-old/'>
             <div class='content__post content__post--3'>
                 <p class='post__title'>
                     Defenders of Old
@@ -30,7 +30,7 @@
                     Exploring the most decorated players of Dota 2
                 </p>
             </div>
-            <a href='https://lemonwaffle.github.io/meta-game/'>
+            <a href='https://yizhe-ang.github.io/meta-game/'>
             <div class='content__post content__post--2'>
                 <p class='post__title'>
                     the Metagame
@@ -41,7 +41,7 @@
                 </p>
             </div>
             </a>
-            <a href='https://lemonwaffle.github.io/hold-your-zebras/'>
+            <a href='https://yizhe-ang.github.io/hold-your-zebras/'>
             <div class='content__post content__post--1'>
                 <p class='post__title'>
                     Hold your zebras
@@ -56,7 +56,7 @@
 
         <!-- FOOTER STARTS HERE -->
         <footer>
-            <a href='https://github.com/lemonwaffle'>
+            <a href='https://github.com/yizhe-ang'>
             <img src='img/github-grey.png' />
             </a>
         </footer>
