--- a/index.html
+++ b/index.html
@@ -3,30 +3,61 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>lemonwaffle</title>
+        <title>Yi Zhe Ang</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="icon" href="img/favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|Roboto+Mono:400,700" rel="stylesheet">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
-
 
     <body>
         <!-- HEADER STARTS HERE -->
         <header>
             <img src='img/lemonwaffle.gif' />
-            <h1>lemon waffle</h1>
+            <div class="header--name">Yi Zhe <span class="fade">Ang</span></div>
             <!-- <h2>data-viz</h2> -->
+            <div class="header--text">
+                <span class="header--box" style="background: #d5fff5;">Machine Learning</span>
+                <span class="fade"> and </span>
+                <span class="header--box" style="background: #ffd9d5;">Data Visualization</span>
+            </div>
+            <div class="header--socials">
+                <a href="https://github.com/yizhe-ang"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/yizhe_ang"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/yizhe-ang/"><i class="fa fa-linkedin"></i></a>
+            </div>
         </header>
-        <!-- CONTENT STARTS HERE -->
 
+        <!-- CONTENT STARTS HERE -->
         <div class='content'>
+            <a href='https://trade-network-vis.vercel.app/'>
+            <div class='content__post content__post--5'>
+                <p class='post__title dark'>
+                    Global Trade Network
+                </p>
+                <p class='post__subtitle dark'>
+                    Interactives
+                </p>
+            </div>
+            <a href='https://observablehq.com/@yizhe-ang/interactive-visualization-of-linear-regression'>
+            <div class='content__post content__post--4'>
+                <p class='post__title dark'>
+                    Linear Regression
+                </p>
+                <p class='post__subtitle dark'>
+                    Interactives
+                </p>
+            </div>
             <a href='https://yizhe-ang.github.io/defenders-of-old/'>
             <div class='content__post content__post--3'>
                 <p class='post__title'>
                     Defenders of Old
                 </p>
                 <p class='post__subtitle'>
-                    <span>Aug 2018</span>
+                    <!-- <span>Aug 2018</span> -->
                     Exploring the most decorated players of Dota 2
                 </p>
             </div>
@@ -36,7 +67,7 @@
                     the Metagame
                 </p>
                 <p class='post__subtitle'>
-                    <span>Oct 2017</span>
+                    <!-- <span>Oct 2017</span> -->
                     Figuring out what IceFrog is up to
                 </p>
             </div>
@@ -47,7 +78,7 @@
                     Hold your zebras
                 </p>
                 <p class='post__subtitle'>
-                    <span>Sep 2017</span>
+                    <!-- <span>Sep 2017</span> -->
                     Visualizing the Base Rate Fallacy
                 </p>
             </div>
@@ -56,9 +87,9 @@
 
         <!-- FOOTER STARTS HERE -->
         <footer>
-            <a href='https://github.com/yizhe-ang'>
+            <!-- <a href='https://github.com/yizhe-ang'>
             <img src='img/github-grey.png' />
-            </a>
+            </a> -->
         </footer>
     </body>
 </html>
