--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                 </p>
             </div>
             </a>
+
+            <div class="section__title"><h1>in limbo...</h1></div>
+
+            <a href='https://parliament-represent-vis.vercel.app/'>
+            <div class='content__post content__post--6'>
+                <p class='post__title dark'>
+                    Reaching for Venus
+                </p>
+                <p class='post__subtitle dark'>
+                    <!-- <span>Sep 2017</span> -->
+                    Exploring Female Representation in Parliaments around the World and Singapore
+                </p>
+            </div>
+            </a>
         </div>
 
         <!-- FOOTER STARTS HERE -->
