add new article

--- a/index.html
+++ b/index.html
@@ -84,7 +84,20 @@
             </div>
             </a>
 
-            <div class="section__title"><h1>in limbo...</h1></div>
+            <!-- <div class="section__title"><h1>in limbo...</h1></div> -->
+            <div class="section__title"><h1>work in progress :)</h1></div>
+
+            <a href='https://k-means-explorable.vercel.app/'>
+            <div class='content__post content__post--7'>
+                <p class='post__title dark'>
+                    K-Means Clustering
+                </p>
+                <p class='post__subtitle dark'>
+                    <!-- <span>Sep 2017</span> -->
+                    An Explorable Explainer
+                </p>
+            </div>
+            </a>
 
             <a href='https://parliament-represent-vis.vercel.app/'>
             <div class='content__post content__post--6'>
