minor cosmetic edits

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="header--name">Yi Zhe <span class="fade">Ang</span></div>
             <!-- <h2>data-viz</h2> -->
             <div class="header--text">
-                <span class="header--box" style="background: #d5fff5;">Visual Communication</span>,
-                <span class="header--box" style="background: #d5fff5;">Data Visualization</span>
+                <span class="header--box" style="background: hsl(166, 100%, 92%, 0.6);">Visual Communication</span>,
+                <span class="header--box" style="background: hsl(166, 100%, 92%, 0.6);">Data Visualization</span>
                 <span class="fade"> and </span>
-                <span class="header--box" style="background: #ffd9d5;">Machine Learning</span>
+                <span class="header--box" style="background: hsl(6, 100%, 92%, 0.6);">Machine Learning</span>
             </div>
             <div class="header--socials">
                 <a href="https://github.com/yizhe-ang"><i class="fa fa-github"></i></a>
