minor cosmetic changes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
             <div class="header--name">Yi Zhe <span class="fade">Ang</span></div>
             <!-- <h2>data-viz</h2> -->
             <div class="header--text">
-                <span class="header--box" style="background: hsl(166, 100%, 92%, 0.6);">Visual Communication</span>,
+                <span class="header--box" style="background: hsl(166, 100%, 92%, 0.6);">Visual Communication</span>
+                <!-- <span class="fade">,</span> -->
+                <br/>
                 <span class="header--box" style="background: hsl(166, 100%, 92%, 0.6);">Data Visualization</span>
-                <span class="fade"> and </span>
+                <!-- <span class="fade">,</span> -->
+                <br/>
                 <span class="header--box" style="background: hsl(6, 100%, 92%, 0.6);">Machine Learning</span>
             </div>
             <div class="header--socials">
